      due to the same broken dependency with resolveLevel 2 has been fixed.
      This bug affected the ability to simply run "conary update conary" when 
      conary-build and conary-repository will both installed. (CNY-949)
    * Conary will now display config lines that are equivalent to the default
      configuration value but are set explicitly by the user. (CNY-959)

Changes in 1.0.33:
  o Client Changes:
    * The "cvc" and "conary" command line programs have new command
      line argument aliases.  They accept "-r" as an alias for
      "--root" and "-c" as an alias for "--config".  Commands that
      accept "--info" now accept "-i" as an alias.
    * Contexts can now override any configuration option. (CNY-812)
    * The meaning of the "--components" command line option has
      changed to be more intuitive.  For example, "conary q
      --components" will show all the components for all packages,
      indented as expected. (CNY-822)

  o Build (cvc) Changes:
    * "cvc commit -m'commit message'" is now accepted.  Previously, a
      space was required between the -m and the message.
    * Permissions are now preserved by tar when extracting a tar
      archive added with r.addArchive().
    * The Requires policy now parses pkg-config files more reliably.
    * "cvc cook" now has a "--download" option, which fetches the
      applicable sources from upstream or from the repository and then
      stops. (CNY-837)
    * If cooking a group results in conflicts, the error message will now
      show you the reason why the troves in conflict were included in the
      group. (CNY-876)
    * A new r.addCopy() command is now available to group recipes.  It
      performs the actions required to create a new group, add all of
      the troves from a different group, and add the new group to the
      current group. (CNY-360)
    * In a group recipe, if r.replace() or r.remove() does nothing, a